# cmake-tutorial

cmake-headers/: CMakeLists.txt
cmake-headers/include/: table.h
cmake-headers/src/: main.c  table.c
compile-and-use-sqlite3/: CMakeLists.txt
hello-cmake/: CMakeLists.txt  main.c
sqlite3-library/: CMakeLists.txt
use-sqlite3-library/: CMakeLists.txt
use-sqlite3-library/src/: create.c  insert.c  select.c
